# beads_viewer_rust

./: .gitignore  AGENTS.md  AUDIENCE_EXPORT_PLAN.md  AUDIENCE_EXPORT_THINKING_LOG.md  CHANGELOG.md  Cargo.toml  FEATURE_PARITY.md  MANUAL_SWARM_CHECKLIST.md  PLAN_TO_PORT_BEADS_VIEWER_TO_RUST.md  PROPOSED_ARCHITECTURE.md  README.md  REPLY2_DRAFT.md  REPLY3_DRAFT.md  REPLY_DRAFT.md
.beads/: issues.jsonl
.beads/.br_history/: issues.20260227_024644.jsonl  issues.20260227_033918.jsonl  issues.20260308_225826_663751665.jsonl  issues.20260308_225838_660251259.jsonl  issues.20260308_231117_620500741.jsonl  issues.20260308_231128_849864763.jsonl  issues.20260308_231520_060527995.jsonl  issues.20260308_231612_987581546.jsonl  issues.20260308_232045_253621611.jsonl  issues.20260308_232117_141698171.jsonl  issues.20260308_232820_835078938.jsonl  issues.20260308_233133_301287576.jsonl  issues.20260308_233520_812248997.jsonl  issues.20260308_233535_751688465.jsonl  issues.20260308_233950_275445985.jsonl  issues.20260308_234015_659282921.jsonl  issues.20260308_234031_605495412.jsonl  issues.20260308_235514_580360349.jsonl  issues.20260308_235521_475678084.jsonl  issues.20260308_235601_202497147.jsonl  issues.20260309_000109_076894090.jsonl  issues.20260309_000220_470473598.jsonl  issues.20260309_000400_629383503.jsonl  issues.20260309_000409_618163675.jsonl  issues.20260309_002524_677521391.jsonl  issues.20260309_002536_932097503.jsonl  issues.20260309_003542_059410111.jsonl  issues.20260309_003621_329140999.jsonl  issues.20260309_004757_118375333.jsonl  issues.20260309_004815_942851692.jsonl  issues.20260309_004850_498931397.jsonl  issues.20260309_010040_940373695.jsonl  issues.20260309_010827_327508148.jsonl  issues.20260309_011035_785027132.jsonl  issues.20260309_012757_495987454.jsonl  issues.20260309_012940_218028182.jsonl  issues.20260309_050940_835369080.jsonl  issues.20260309_054600_576331783.jsonl  issues.20260309_054619_900780215.jsonl  issues.20260309_060935_395586419.jsonl  (+599 more)
.github/workflows/: ci.yml
benches/: triage.rs
examples/contract-consumers/: README.md  demo.sh  economics.sample.json  triad.sh
examples/contract-consumers/lenses/engineer/: brief.sh  sample_output.txt
examples/contract-consumers/lenses/erp/: adapter.jq  sample_output.json
examples/contract-consumers/lenses/investor/: brief.sh  sample_output.txt
examples/contract-consumers/lenses/owner/: brief.sh  sample_output.txt
examples/contract-consumers/portfolio/: rollup.sh
scripts/: e2e_preview_pages.sh  e2e_robot_cli.sh
src/: agents.rs  cli.rs  error.rs  export_md.rs  export_pages.rs  export_sqlite.rs  lib.rs  loader.rs  main.rs  model.rs  pages_wizard.rs  robot.rs  tui.rs  viewer_assets.rs
src/analysis/: advanced.rs  alerts.rs  brief.rs  cache.rs  causal.rs  correlation.rs  delivery.rs  diff.rs  drift.rs  economics.rs  file_intel.rs  forecast.rs  git_history.rs  graph.rs  history.rs  label_intel.rs  mod.rs  plan.rs  recipe.rs  search.rs  suggest.rs  triage.rs  whatif.rs
src/snapshots/: bvr__tui__tests__e2e_journey_actionable_tree_attention_flow.snap  bvr__tui__tests__e2e_journey_empty_data_edge_case.snap  bvr__tui__tests__e2e_journey_history_deep_dive.snap  bvr__tui__tests__e2e_journey_main_board_insights_graph_investigation.snap  bvr__tui__tests__e2e_journey_narrow_geometry_stress.snap  bvr__tui__tests__snap_actionable_detail_focus.snap  bvr__tui__tests__snap_actionable_medium.snap  bvr__tui__tests__snap_actionable_narrow.snap  bvr__tui__tests__snap_actionable_wide.snap  bvr__tui__tests__snap_after_board_search.snap  bvr__tui__tests__snap_after_insights_panel_cycle.snap  bvr__tui__tests__snap_attention_detail_focus.snap  bvr__tui__tests__snap_attention_list_overview.snap  bvr__tui__tests__snap_board_detail_focus.snap  bvr__tui__tests__snap_board_medium.snap  bvr__tui__tests__snap_board_narrow.snap  bvr__tui__tests__snap_board_wide.snap  bvr__tui__tests__snap_confirm_modal.snap  bvr__tui__tests__snap_filter_applied.snap  bvr__tui__tests__snap_flow_matrix_detail_focus.snap  bvr__tui__tests__snap_flow_matrix_list_overview.snap  bvr__tui__tests__snap_flow_matrix_medium.snap  bvr__tui__tests__snap_flow_matrix_narrow.snap  bvr__tui__tests__snap_flow_matrix_wide.snap  bvr__tui__tests__snap_graph_detail_focus.snap  bvr__tui__tests__snap_graph_medium.snap  bvr__tui__tests__snap_graph_narrow.snap  bvr__tui__tests__snap_graph_narrow.snap.new  bvr__tui__tests__snap_graph_wide.snap  bvr__tui__tests__snap_help_overlay.snap  bvr__tui__tests__snap_history_git_mode.snap  bvr__tui__tests__snap_history_git_mode.snap.new  bvr__tui__tests__snap_history_medium.snap  bvr__tui__tests__snap_history_medium.snap.new  bvr__tui__tests__snap_history_narrow.snap  bvr__tui__tests__snap_history_wide.snap  bvr__tui__tests__snap_history_wide.snap.new  bvr__tui__tests__snap_insights_heatmap_drill.snap  bvr__tui__tests__snap_insights_medium.snap  bvr__tui__tests__snap_insights_narrow.snap  (+25 more)
src/snapshots/ftui-0.2.1/: .cargo_vcs_info.json  Cargo.toml
src/snapshots/ftui-0.2.1/src/: error.rs  lib.rs
tests/: admin_cli.rs  cli_model_validation.rs  conformance.rs  e2e_export_pages.rs  e2e_robot_matrix.rs  e2e_workspace_history.rs  export_md.rs  export_pages.rs  schema_validation.rs  stress_fixtures.rs  test_parse_timestamp.rs
tests/conformance/fixtures/go_outputs/: bvr.json  bvr_adversarial.json  bvr_extended.json
tests/conformance/go_reference/cmd/bvr/: main.go
tests/test_utils/: mod.rs
tests/testdata/: FIXTURES.md  all_closed.jsonl  fixture_metadata.json  gen_stress_fixtures.py  malformed_metadata.jsonl  pathological_deps.jsonl  stress_complex_89.jsonl  stress_large_500.jsonl
viewer_assets/: graph.js  index.html  viewer.js
