[package]
name = "bvr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Spec-first Rust port of beads_viewer (bv)"
license-file = "LICENSE"

[[bin]]
name = "bvr"
path = "src/main.rs"

[[bench]]
name = "triage"
harness = false

[dependencies]
anyhow = "1.0.101"
asupersync = { version = "0.2.5", default-features = false, optional = true }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive", "env"] }
ftui = { version = "0.2.1", features = ["crossterm"] }
itertools = "0.14.0"
petgraph = "0.8.3"
png = "0.17.16"
rusqlite = { version = "0.38.0", features = ["bundled-full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
signal-hook = "0.3.18"
tempfile = "3.25.0"
thiserror = "2.0.18"
toon = { package = "tru", version = "0.2.0" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = []
asupersync-runtime = ["dep:asupersync"]

[build-dependencies]
vergen-gix = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
assert_cmd = "2.1.2"
criterion = "0.8.2"
insta = "1.42.2"
predicates = "3.1.4"
pretty_assertions = "1.4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
