[package]
name = "bvr"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Spec-first Rust port of beads_viewer (bv)"
license-file = "LICENSE"

[[bin]]
name = "bvr"
path = "src/main.rs"

[[bench]]
name = "triage"
harness = false

[dependencies]
anyhow = "1.0.101"
asupersync = { version = "0.2.9", default-features = false, optional = true }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive", "env"] }
ftui = { version = "0.2.1", features = ["crossterm"] }
itertools = "0.14.0"
petgraph = "0.8.3"
png = "0.17.16"
rusqlite = { version = "0.38.0", features = ["bundled-full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
signal-hook = "0.3.18"
tempfile = "3.25.0"
thiserror = "2.0.18"
toon = { package = "tru", version = "0.2.0" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[features]
default = []
asupersync-runtime = ["dep:asupersync"]

[build-dependencies]
vergen-gix = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
assert_cmd = "2.1.2"
criterion = "0.8.2"
insta = "1.42.2"
predicates = "3.1.4"
pretty_assertions = "1.4.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
doc_markdown = { level = "allow", priority = 1 }
use_self = { level = "allow", priority = 1 }
if_not_else = { level = "allow", priority = 1 }
stable_sort_primitive = { level = "allow", priority = 1 }
clone_on_copy = { level = "allow", priority = 1 }
field_reassign_with_default = { level = "allow", priority = 1 }
float_cmp = { level = "allow", priority = 1 }
single_char_pattern = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
useless_format = { level = "allow", priority = 1 }
redundant_closure_for_method_calls = { level = "allow", priority = 1 }
needless_raw_string_hashes = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
match_same_arms = { level = "allow", priority = 1 }
redundant_guards = { level = "allow", priority = 1 }
unused_self = { level = "allow", priority = 1 }
needless_continue = { level = "allow", priority = 1 }
manual_contains = { level = "allow", priority = 1 }
map_unwrap_or = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }
manual_range_contains = { level = "allow", priority = 1 }
manual_div_ceil = { level = "allow", priority = 1 }
redundant_clone = { level = "allow", priority = 1 }
manual_string_new = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
needless_lifetimes = { level = "allow", priority = 1 }
nonminimal_bool = { level = "allow", priority = 1 }
same_item_push = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
unnecessary_cast = { level = "allow", priority = 1 }
needless_update = { level = "allow", priority = 1 }
assertions_on_constants = { level = "allow", priority = 1 }
cloned_ref_to_slice_refs = { level = "allow", priority = 1 }
unnecessary_get_then_check = { level = "allow", priority = 1 }
needless_collect = { level = "allow", priority = 1 }
needless_range_loop = { level = "allow", priority = 1 }
needless_return = { level = "allow", priority = 1 }
let_and_return = { level = "allow", priority = 1 }
unnecessary_map_or = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
needless_borrow = { level = "allow", priority = 1 }
implicit_clone = { level = "allow", priority = 1 }
case_sensitive_file_extension_comparisons = { level = "allow", priority = 1 }
